more menuBar spacing fixes

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -205,7 +205,7 @@ a.faculty-links:hover {
 }
 
 .banner__position {
-  padding: 0px;
+  padding: 0;
 }
 
 .style__picture {
@@ -213,7 +213,7 @@ a.faculty-links:hover {
 }
 
 .default_padding {
-  padding: 0%;
+  padding: 0;
 }
 
 .course_title {
